# mdnmcp

./: README.md  pyproject.toml
src/mdnmcp/: config.py  server.py
src/mdnmcp/utils/: __init__.py  doc.py  search.py
tests/: test_doc.py  test_search.py  test_server.py
